--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
+# Ignore Gradle project-specific cache directory
 .gradle
-/build/
 
-# Ignore Gradle GUI config
-gradle-app.setting
+# Ignore generated classes
+bin
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
+# Ignore Gradle build output directory
+build
 
-# Cache of project
-.gradletasknamecache
+# InteliJ
 
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
+.idea
