--- a/jsonaif-bench/build.gradle
+++ b/jsonaif-bench/build.gradle
@@ -8,7 +8,7 @@
 
 plugins {
     // Apply the org.jetbrains.kotlin.jvm Plugin to add support for Kotlin.
-    id 'org.jetbrains.kotlin.jvm' version '1.5.20'
+    id 'org.jetbrains.kotlin.jvm'
 
     // This plugin integrates the JMH micro-benchmarking framework with Gradle.
     id 'java-library'
@@ -16,8 +16,8 @@ plugins {
 }
 
 repositories {
-    // Use JCenter for resolving dependencies.
-    jcenter()
+    // Use Maven Central for resolving dependencies.
+    mavenCentral()
 }
 
 dependencies {
